fix spacing

--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -142,6 +142,6 @@ a{
 
 @media print {
   .sidebar-card.education {
-    margin-top: 400px;
+    margin-top: 500px;
   }
 }
